--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第三部分 子类型化/第16章 子类型的元理论.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第三部分 子类型化/第16章 子类型的元理论.md
@@ -2,11 +2,873 @@
 
 
 
+**16 子类型的元理论（Metatheory of Subtyping）**
 
+在上一章中，我们定义了带有子类型的简单类型 $\lambda$-演算。然而，这个系统的规则并不直接适用于实现。与我们之前看到的其他演算不同，这个系统的规则**不是语法导向的（syntax-directed）**——它们不能简单地“自下而上”读取以形成一个类型检查算法。主要的问题出在类型关系中的**包含规则（T-Sub）**和子类型关系中的**传递性规则（S-Trans）**。
+
+**问题的原因**
+
+**包含规则 T-Sub** 的问题在于，其结论中的项被指定为一个裸的元变量 $t$：
+
+$$
+\frac{\Gamma \vdash t : S \quad S <: T}{\Gamma \vdash t : T} \quad (\text{T-Sub})
+$$
+
+其他每个类型规则都指定了某种特定形式的项——$\text{T-Abs}$ 仅适用于 $\lambda$-抽象，$\text{T-Var}$ 仅适用于变量，等等——而 $\text{T-Sub}$ 可以应用于任何类型的项。这意味着，如果我们给定一个项 $t$，并尝试计算其类型，我们总是可以应用 $\text{T-Sub}$ 或者其他结论与 $t$ 的形状匹配的规则。
+
+**传递性规则 S-Trans** 的问题原因类似——它的结论与所有其他规则的结论重叠。
+
+$$
+\frac{S <: U \quad U <: T}{S <: T} \quad (\text{S-Trans})
+$$
+
+由于 $S$ 和 $T$ 是裸的元变量，我们可以将 $\text{S-Trans}$ 作为任何子类型语句推导的最后一条规则。因此，如果我们想要自下而上地实现子类型规则，就无法知道应该尝试使用这条规则，还是尝试使用其他结论更具体的规则来检查我们试图验证的两个类型之间的子类型关系。
+
+**另一个问题**
+
+$\text{S-Refl}$ 规则也与其他子类型规则的结论重叠。这比 $\text{T-Sub}$ 和 $\text{S-Trans}$ 的问题要轻微一些：反身性规则没有前提条件，因此如果它与我们试图证明的子类型语句匹配，我们可以立即成功。但它仍然是规则非语法导向的另一个原因。
+
+---
+
+**解决方案**
+
+解决所有这些问题的方法是用两个新的关系替换普通（或声明式）的子类型和类型关系，称为**算法子类型关系（algorithmic subtyping relation）**和**算法类型关系（algorithmic typing relation）**，其推理规则集是语法导向的。然后，我们通过展示原始的子类型和类型关系实际上与算法表示一致来证明这一替换是合理的：当且仅当子类型语句 $S <: T$ 可以从声明式规则中推导出来时，它也可以从算法子类型规则中推导出来；当且仅当一个项可以由算法类型规则类型化时，它也可以由声明式规则类型化。
+
+在第16.1节中，我们开发了算法子类型关系。在第16.2节中，我们处理了算法类型关系。第16.3节讨论了像 $\text{if...then...else}$ 这样具有多个分支的构造的特殊类型检查问题，它们需要附加的结构（子类型关系中存在**最小上界（least upper bounds, joins）**）。第16.4节考虑了最小类型 $\text{Bot}$。
+
+---
+
+**16.1 算法子类型（Algorithmic Subtyping）**
+
+任何带有子类型的语言的实现的关键元素是一个用于检查一个类型是否是另一个类型的子类型的算法。当类型检查器遇到一个应用 $t_1 \ t_2$，其中 $t_1$ 的类型为 $T \to U$，$t_2$ 的类型为 $S$ 时，它将调用这个子类型检查器。其功能是决定子类型语句 $S <: T$ 是否可以从图15-1和15-3中的子类型规则推导出来。
+
+**算法子类型关系**
+
+它通过检查 $(S, T)$ 是否属于另一个关系，记为 $\vdash_\text{alg} S <: T$（“$S$ 是算法上的 $T$ 的子类型”），该关系被定义为一种可以简单地通过遵循类型的结构来决定成员性的关系，并且包含与普通子类型关系相同的类型对。算法关系与声明式关系的显著区别在于，算法关系**去掉了** $\text{S-Trans}$ 和 $\text{S-Refl}$ 规则。
+
+---
+
+**重构声明式系统**
+
+首先，我们需要对声明式系统进行一些重组。正如我们在第184页看到的，我们需要使用传递性来“粘合”涉及深度、宽度和置换子类型化组合的记录的子类型推导。在我们可以去掉 $\text{S-Trans}$ 之前，我们必须首先添加一个规则，将深度、宽度和置换子类型化捆绑成一个：
+
+$$
+\text{如果 } \{l_i \mid i \in 1..n\} \subseteq \{k_j \mid j \in 1..m\} \quad \text{并且对于所有 } k_j = l_i, \ S_j <: T_i \\
+\frac{}{\{k_j : S_j \mid j \in 1..m\} <: \{l_i : T_i \mid i \in 1..n\}} \quad (\text{S-Rcd})
+$$
+
+这个规则综合了之前的宽度、深度和置换子类型化规则。
+
+---
+
+**16.1.1 引理：**
+
+如果 $S <: T$ 可以从包含 $\text{S-RcdDepth}$、$\text{S-RcdWidth}$ 和 $\text{S-RcdPerm}$（但不包括 $\text{S-Rcd}$）的子类型规则中推导出来，那么它也可以使用 $\text{S-Rcd}$（不包括 $\text{S-RcdDepth}$、$\text{S-RcdWidth}$ 或 $\text{S-RcdPerm}$）推导出来，反之亦然。
+
+**证明：**
+
+直接对推导进行归纳。
+
+---
+
+**图16-1：带有记录的子类型关系（简洁版本）**
+
+- **子类型规则：**
+
+  1. **反身性（Reflexivity）：**
+
+     $$
+     S <: S \quad (\text{S-Refl})
+     $$
+
+  2. **传递性（Transitivity）：**
+
+     $$
+     \frac{S <: U \quad U <: T}{S <: T} \quad (\text{S-Trans})
+     $$
+
+  3. **顶类型（Top）：**
+
+     $$
+     S <: \text{Top} \quad (\text{S-Top})
+     $$
+
+  4. **函数类型（Arrows）：**
+
+     $$
+     \frac{T_1 <: S_1 \quad S_2 <: T_2}{S_1 \to S_2 <: T_1 \to T_2} \quad (\text{S-Arrow})
+     $$
+
+  5. **记录类型（Records）：**
+
+     $$
+     \text{如果 } \{l_i \mid i \in 1..n\} \subseteq \{k_j \mid j \in 1..m\} \quad \text{并且对于所有 } k_j = l_i, \ S_j <: T_i \\
+     \frac{}{\{k_j : S_j \mid j \in 1..m\} <: \{l_i : T_i \mid i \in 1..n\}} \quad (\text{S-Rcd})
+     $$
+
+---
+
+**去除反身性和传递性**
+
+接下来，我们展示在图16-1的系统中，反身性和传递性规则是非必要的。
+
+**16.1.2 引理：**
+
+1. 对于每个类型 $S$，$S <: S$ 可以不使用 $\text{S-Refl}$ 推导出来。
+
+2. 如果 $S <: T$ 可推导，那么可以在不使用 $\text{S-Trans}$ 的情况下推导出来。
+
+**证明：**
+
+*练习 [推荐，«««]*
+
+---
+
+**16.1.3 练习 [«]**
+
+**问题：**
+
+如果我们添加类型 $\text{Bool}$，这些性质会如何变化？
+
+**解答：**
+
+添加类型 $\text{Bool}$ 后，子类型关系中可能会引入新的子类型规则，如 $\text{Bool} <: \text{Top}$。但由于 $\text{Bool}$ 是一个基本类型，其反身性仍然成立，即 $ \text{Bool} <: \text{Bool}$。因此，引理16.1.2 的结论仍然适用。
+
+---
+
+**算法子类型关系的定义**
+
+**16.1.4 定义：**
+
+**算法子类型关系**是闭包于图16-2中的规则的最小类型关系。
+
+---
+
+**图16-2：算法子类型**
+
+- **子类型规则 $\vdash_\text{alg} S <: T$：**
+
+  1. **顶类型规则：**
+
+     $$
+     \frac{}{\vdash_\text{alg} S <: \text{Top}} \quad (\text{SA-Top})
+     $$
+
+  2. **记录类型规则：**
+
+     $$
+     \text{如果 } \{l_i \mid i \in 1..n\} \subseteq \{k_j \mid j \in 1..m\} \quad \text{并且对于所有 } k_j = l_i, \ \vdash_\text{alg} S_j <: T_i \\
+     \frac{}{\vdash_\text{alg} \{k_j : S_j \mid j \in 1..m\} <: \{l_i : T_i \mid i \in 1..n\}} \quad (\text{SA-Rcd})
+     $$
+
+  3. **函数类型规则：**
+
+     $$
+     \frac{\vdash_\text{alg} T_1 <: S_1 \quad \vdash_\text{alg} S_2 <: T_2}{\vdash_\text{alg} S_1 \to S_2 <: T_1 \to T_2} \quad (\text{SA-Arrow})
+     $$
+
+---
+
+**健全性和完备性**
+
+我们说算法规则是**健全的（sound）**，因为从算法规则可以推导出的每个语句也可以从声明式规则推导出来（算法规则不会证明任何新的东西）；算法规则是**完备的（complete）**，因为从声明式规则可以推导出的每个语句也可以从算法规则推导出来（算法规则证明了所有之前可以证明的东西）。
+
+**16.1.5 命题 [健全性和完备性]：**
+
+$S <: T$ 当且仅当 $\vdash_\text{alg} S <: T$。
+
+**证明：**
+
+每个方向都通过对推导的归纳进行，使用前面的两个引理。
+
+---
+
+**算法子类型检查器**
+
+现在，算法规则是语法导向的，可以直接作为检查算法子类型关系（因此也检查声明式子类型关系）的算法来阅读。用更常规的伪代码表示，算法如下：
+
+```pseudo
+function subtype(S, T):
+    if T == Top:
+        return true
+    else if S == S1 -> S2 and T == T1 -> T2:
+        return subtype(T1, S1) and subtype(S2, T2)
+    else if S == {k_j : S_j | j in 1..m} and T == {l_i : T_i | i in 1..n}:
+        if {l_i} subset of {k_j}:
+            for each label l_i:
+                find k_j == l_i and check subtype(S_j, T_i)
+            return true
+        else:
+            return false
+    else:
+        return false
+```
+
+---
+
+**终止性**
+
+**16.1.6 命题 [终止性]：**
+
+如果 $\vdash_\text{alg} S <: T$ 可推导，那么 `subtype(S, T)` 将返回 `true`。如果不能，那么 `subtype(S, T)` 将返回 `false`。
+
+这个定理，加上算法规则的健全性和完备性，实际上断言了 `subtype` 函数是声明式子类型关系的一个决策过程。
+
+**证明：**
+
+第一个断言可以通过对 $\vdash_\text{alg} S <: T$ 的推导进行直接归纳来验证。反过来，也可以容易地验证，如果 `subtype(S, T)` 返回 `true`，那么 $\vdash_\text{alg} S <: T$。因此，为了证明第二个断言，只需证明 `subtype(S, T)` 总是返回某个值——即，它不会发散。这可以通过观察输入对 $S$ 和 $T$ 的大小之和总是严格大于算法进行的任何递归调用的参数的大小之和来完成。由于这个和总是正数，因此不可能存在无限的递归调用序列。
+
+---
+
+**关于声明式和算法子类型定义的讨论**
+
+读者可能会想，我们是否可以通过简单地将算法子类型关系的定义作为官方定义，从而节省本节的所有工作，并且从不提及声明式版本。答案是有条件的“是”。我们当然可以在定义演算时将算法定义作为官方定义，如果我们愿意的话。
+
+然而，这并不能真正节省多少工作，因为为了证明依赖于子类型关系的类型关系是良好的，我们需要知道子类型是反身和传递的，而这些证明涉及与我们在这里所做的工作大致相同的工作。（另一方面，语言定义确实经常采用算法表示的类型关系。我们将在第19章中看到一个例子。）
+
+---
+
+**16.2 算法类型（Algorithmic Typing）**
+
+在控制了子类型关系之后，我们需要对类型关系做同样的处理。正如我们在第209页看到的，唯一的非语法导向的类型规则是 $\text{T-Sub}$，因此这是我们必须处理的。就像上一节中的 $\text{S-Trans}$ 一样，我们不能简单地删除包含规则：我们必须首先检查它在类型化中发挥关键作用的地方，并丰富其他类型规则，以更语法导向的方式实现相同的效果。
+
+---
+
+**包含规则的关键作用**
+
+显然，包含规则的一个关键作用是**弥合函数所期望的类型与其参数的实际类型之间的差距**。像下面这样的项：
+
+$$
+(\lambda r:\{x:\text{Nat}\}. \ r.x) \ \{x=0, y=1\}
+$$
+
+如果没有包含规则是无法类型化的。
+
+---
+
+**子类型的关键作用**
+
+或许令人惊讶的是，这是包含规则在类型化中发挥关键作用的唯一情况。在其他所有情况下，包含规则可以被“推迟”，通过将其向树的根部移动来重组推导，以达到相同的结论。要理解为什么会这样，尝试一下涉及包含规则的类型推导是很有启发性的，对于每个类型规则，考虑一个以该规则结尾的推导，如果其直接的子推导以 $\text{T-Sub}$ 结尾，我们如何重新组织推导。
+
+---
+
+**例子：$\text{T-Abs}$ 的情况**
+
+例如，假设我们有一个以 $\text{T-Abs}$ 结尾的类型推导，其直接的子推导以 $\text{T-Sub}$ 结尾：
+
+$$
+\frac{\Gamma, x:S_1 \vdash s_2 : S_2 \quad S_2 <: T_2}{\Gamma, x:S_1 \vdash s_2 : T_2} \quad (\text{T-Sub})
+$$
+
+然后，应用 $\text{T-Abs}$：
+
+$$
+\frac{\Gamma, x:S_1 \vdash s_2 : T_2}{\Gamma \vdash \lambda x:S_1 . s_2 : S_1 \to T_2} \quad (\text{T-Abs})
+$$
+
+这种推导可以重新安排，使得包含规则在抽象规则之后使用，以达到相同的结论：
+
+1. 首先，不使用 $\text{T-Sub}$，直接应用 $\text{T-Abs}$：
+
+   $$
+   \frac{\Gamma, x:S_1 \vdash s_2 : S_2}{\Gamma \vdash \lambda x:S_1 . s_2 : S_1 \to S_2} \quad (\text{T-Abs})
+   $$
+
+2. 然后，应用 $\text{S-Refl}$ 和 $\text{S-Arrow}$，得到 $S_1 \to S_2 <: S_1 \to T_2$：
+
+   $$
+   \text{因为 } S_1 <: S_1 \quad (\text{S-Refl}) \\
+   \text{且 } S_2 <: T_2 \\
+   \text{所以 } S_1 \to S_2 <: S_1 \to T_2 \quad (\text{S-Arrow})
+   $$
+
+3. 最后，应用 $\text{T-Sub}$：
+
+   $$
+   \frac{\Gamma \vdash \lambda x:S_1 . s_2 : S_1 \to S_2 \quad S_1 \to S_2 <: S_1 \to T_2}{\Gamma \vdash \lambda x:S_1 . s_2 : S_1 \to T_2} \quad (\text{T-Sub})
+   $$
+
+---
+
+**例子：$\text{T-App}$ 的情况**
+
+对于应用规则 $\text{T-App}$，有两个子推导，其中任何一个都可能以 $\text{T-Sub}$ 结尾。先考虑左侧子推导以 $\text{T-Sub}$ 结尾的情况：
+
+1. 左侧子推导以 $\text{T-Sub}$ 结尾：
+
+   $$
+   \frac{\Gamma \vdash s_1 : S_{11} \to S_{12} \quad S_{11} \to S_{12} <: T_{11} \to T_{12}}{\Gamma \vdash s_1 : T_{11} \to T_{12}} \quad (\text{T-Sub})
+   $$
+
+2. 然后应用 $\text{T-App}$：
+
+   $$
+   \frac{\Gamma \vdash s_1 : T_{11} \to T_{12} \quad \Gamma \vdash s_2 : T_{11}}{\Gamma \vdash s_1 \ s_2 : T_{12}} \quad (\text{T-App})
+   $$
+
+由于子类型关系中的 $\text{S-Arrow}$ 规则，$S_{11} \to S_{12} <: T_{11} \to T_{12}$ 可以表示为：
+
+$$
+\text{因为 } T_{11} <: S_{11} \quad \text{且 } S_{12} <: T_{12} \quad (\text{S-Arrow})
+$$
+
+我们可以重新排列推导，以消除 $\text{T-Sub}$ 的实例：
+
+1. 首先，不使用 $\text{T-Sub}$，直接类型化 $s_1$ 和 $s_2$：
+
+   $$
+   \Gamma \vdash s_1 : S_{11} \to S_{12} \\
+   \Gamma \vdash s_2 : T_{11}
+   $$
+
+2. 对于 $s_2$，应用 $\text{T-Sub}$ 将其类型提升为 $S_{11}$：
+
+   $$
+   \frac{\Gamma \vdash s_2 : T_{11} \quad T_{11} <: S_{11}}{\Gamma \vdash s_2 : S_{11}} \quad (\text{T-Sub})
+   $$
+
+3. 然后应用 $\text{T-App}$：
+
+   $$
+   \frac{\Gamma \vdash s_1 : S_{11} \to S_{12} \quad \Gamma \vdash s_2 : S_{11}}{\Gamma \vdash s_1 \ s_2 : S_{12}} \quad (\text{T-App})
+   $$
+
+4. 最后，应用 $\text{T-Sub}$ 将结果类型提升为 $T_{12}$：
+
+   $$
+   \frac{\Gamma \vdash s_1 \ s_2 : S_{12} \quad S_{12} <: T_{12}}{\Gamma \vdash s_1 \ s_2 : T_{12}} \quad (\text{T-Sub})
+   $$
+
+---
+
+**不可消除的包含**
+
+因此，我们看到用于提升应用结果类型的包含规则可以被下推到 $\text{T-App}$ 规则之后，但是用于匹配函数的定义域类型和实际参数类型的包含规则是无法消除的。它可以在两个前提之间移动——我们可以提升参数的类型以匹配函数的定义域，或者我们可以提升函数的类型（通过降低其参数类型）以使其期望我们实际计划给它的参数类型——但我们不能完全消除包含规则。这一观察与我们的直觉完全一致，即这种弥合差距的包含规则的使用对于系统的能力至关重要。
+
+---
+
+**合并相邻的包含规则**
+
+另一种情况是，推导的最后一个规则是 $\text{T-Sub}$，并且其直接的子推导也以 $\text{T-Sub}$ 结尾。在这种情况下，可以将相邻的包含规则合并为一个。
+
+假设有以下推导：
+
+$$
+\frac{\Gamma \vdash s : S \quad S <: U}{\Gamma \vdash s : U} \quad (\text{T-Sub})
+$$
+
+接着，再应用 $\text{T-Sub}$：
+
+$$
+\frac{\Gamma \vdash s : U \quad U <: T}{\Gamma \vdash s : T} \quad (\text{T-Sub})
+$$
+
+可以将其重写为：
+
+1. 首先，使用 $\text{S-Trans}$ 合并子类型关系：
+
+   $$
+   \frac{S <: U \quad U <: T}{S <: T} \quad (\text{S-Trans})
+   $$
+
+2. 然后，应用 $\text{T-Sub}$：
+
+   $$
+   \frac{\Gamma \vdash s : S \quad S <: T}{\Gamma \vdash s : T} \quad (\text{T-Sub})
+   $$
+
+---
+
+**16.2.1 练习 [« 3]**
+
+**问题：**
+
+为了完成实验，展示如何对推导中在 $\text{T-Rcd}$ 或 $\text{T-Proj}$ 之前使用 $\text{T-Sub}$ 的情况进行类似的重排。
+
+**解答：**
+
+*对于 $\text{T-Rcd}$ 的情况：*
+
+假设有推导：
+
+$$
+\frac{\Gamma \vdash t_i : S_i \quad S_i <: T_i}{\Gamma \vdash t_i : T_i} \quad (\text{T-Sub})
+$$
+
+然后应用 $\text{T-Rcd}$：
+
+$$
+\frac{\Gamma \vdash t_1 : T_1 \quad \ldots \quad \Gamma \vdash t_n : T_n}{\Gamma \vdash \{l_1 = t_1, \ldots, l_n = t_n\} : \{l_1 : T_1, \ldots, l_n : T_n\}} \quad (\text{T-Rcd})
+$$
+
+我们可以将 $\text{T-Sub}$ 下推到各个 $t_i$ 的类型推导中。
+
+*对于 $\text{T-Proj}$ 的情况：*
+
+假设有推导：
+
+$$
+\frac{\Gamma \vdash t_1 : S \quad S <: \{l_j : T_j, \ldots\}}{\Gamma \vdash t_1 : \{l_j : T_j, \ldots\}} \quad (\text{T-Sub})
+$$
+
+然后应用 $\text{T-Proj}$：
+
+$$
+\frac{\Gamma \vdash t_1 : \{l_j : T_j, \ldots\}}{\Gamma \vdash t_1.l_j : T_j} \quad (\text{T-Proj})
+$$
+
+我们可以将 $\text{T-Sub}$ 下推到 $t_1$ 的类型推导中。
+
+---
+
+**消除 $\text{T-Sub}$**
+
+通过反复应用这些变换，我们可以将任意的类型推导重写成一种特殊的形式，其中 $\text{T-Sub}$ 仅出现在两个地方：
+
+1. 在应用的右侧子推导的结尾处。
+
+2. 在整个推导的最顶端（即推导的最后一步）。
+
+而且，如果我们简单地删除最顶端的那个 $\text{T-Sub}$，也不会造成太大影响：我们仍然有一个对同一个项赋予类型的推导——唯一的区别是赋予这个项的类型可能是一个更小的（即更好的！）类型。这仅剩一个地方，即应用中，仍然可能出现 $\text{T-Sub}$ 的使用。为了处理这种情况，我们可以用一个稍微更强的规则替换应用规则：
+
+$$
+\frac{\Gamma \vdash t_1 : T_1 \quad T_1 = T_{11} \to T_{12} \quad \Gamma \vdash t_2 : T_2 \quad \vdash_\text{alg} T_2 <: T_{11}}{\Gamma \vdash t_1 \ t_2 : T_{12}} \quad (\text{TA-App})
+$$
+
+这个规则将单个包含规则的实例作为前提纳入其中。每个“应用前接包含”的推导都可以用这个规则替换，从而使我们完全没有 $\text{T-Sub}$ 的使用。此外，增强的应用规则是语法导向的：结论中项的形状防止它与其他规则重叠。
+
+---
+
+**图16-3：算法类型**
+
+- **类型规则 $\Gamma \vdash_\text{alg} t : T$：**
+
+  1. **变量（Var）：**
+
+     $$
+     \text{如果 } x:T \in \Gamma \\
+     \frac{}{\Gamma \vdash_\text{alg} x : T} \quad (\text{TA-Var})
+     $$
+
+  2. **抽象（Abs）：**
+
+     $$
+     \frac{\Gamma, x:T_1 \vdash_\text{alg} t_2 : T_2}{\Gamma \vdash_\text{alg} \lambda x:T_1 . t_2 : T_1 \to T_2} \quad (\text{TA-Abs})
+     $$
+
+  3. **应用（App）：**
+
+     $$
+     \frac{\Gamma \vdash_\text{alg} t_1 : T_1 \quad T_1 = T_{11} \to T_{12} \quad \Gamma \vdash_\text{alg} t_2 : T_2 \quad \vdash_\text{alg} T_2 <: T_{11}}{\Gamma \vdash_\text{alg} t_1 \ t_2 : T_{12}} \quad (\text{TA-App})
+     $$
+
+  4. **记录（Rcd）：**
+
+     $$
+     \frac{\text{对于每个 } i, \ \Gamma \vdash_\text{alg} t_i : T_i}{\Gamma \vdash_\text{alg} \{l_1 = t_1, \ldots, l_n = t_n\} : \{l_1 : T_1, \ldots, l_n : T_n\}} \quad (\text{TA-Rcd})
+     $$
+
+  5. **投影（Proj）：**
+
+     $$
+     \frac{\Gamma \vdash_\text{alg} t_1 : R_1 \quad R_1 = \{l_1 : T_1, \ldots, l_n : T_n\}}{\Gamma \vdash_\text{alg} t_1 . l_j : T_j} \quad (\text{TA-Proj})
+     $$
+
+---
+
+**16.2.3 练习 [« 3]**
+
+**问题：**
+
+展示在算法规则中，项的类型在求值过程中可以减少，通过找到两个项 $s$ 和 $t$，具有算法类型 $S$ 和 $T$，使得 $s \to^* t$ 且 $T <: S$，但 $S \not<: T$。
+
+**解答：**
+
+考虑以下项：
+
+- 定义 $s = (\lambda x:\text{Top}. x) \ (\text{some value})$
+- 由于 $\text{Top}$ 是最大的类型，$x$ 的类型为 $\text{Top}$。
+- 通过算法类型规则，$s$ 的类型为 $\text{Top}$。
+
+现在，求值 $s$：
+
+- $s \to \text{some value}$
+
+假设 $\text{some value}$ 的类型为 $T$。
+
+- 所以 $s \to t$，其中 $t = \text{some value}$，类型为 $T$。
+
+由于 $T <: \text{Top}$，但 $\text{Top} \not<: T$。
+
+---
+
+**算法类型规则的健全性和完备性**
+
+我们现在需要正式检查算法类型规则与原始的声明式规则相对应。
+
+**16.2.4 定理 [健全性]：**
+
+如果 $\Gamma \vdash_\text{alg} t : T$，那么 $\Gamma \vdash t : T$。
+
+**证明：**
+
+对算法类型推导进行直接的归纳。
+
+---
+
+**最小类型定理**
+
+完整性看起来有些不同。普通的类型关系可以用于给项赋予许多类型，而算法类型关系最多只能赋予一个类型（这很容易验证）。因此，定理16.2.4的简单逆命题显然不会成立。相反，我们可以证明，如果一个项 $t$ 在普通类型规则下具有类型 $T$，那么它在算法类型规则下具有一个更好的类型 $S$，使得 $S <: T$。换句话说，算法规则为每个可类型化的项赋予其最小可能（最小）的类型。
+
+**16.2.5 定理 [完备性，或最小类型]：**
+
+如果 $\Gamma \vdash t : T$，那么存在 $S$，使得 $\Gamma \vdash_\text{alg} t : S$ 且 $S <: T$。
+
+**证明：**
+
+*练习 [推荐，««]*
+
+---
+
+**16.2.6 练习 [««]**
+
+**问题：**
+
+如果我们删除箭头子类型规则 $\text{S-Arrow}$，但保持声明式子类型和类型规则的其他部分不变，系统仍然具有最小类型属性吗？如果是，证明之。如果不是，给出一个没有最小类型的可类型化项的例子。
+
+**解答：**
+
+**结论：**
+
+系统将不再具有最小类型属性。
+
+**原因：**
+
+由于缺少 $\text{S-Arrow}$ 规则，函数类型之间的子类型关系将不存在。这意味着我们无法在函数类型之间进行子类型化，从而可能导致类型系统中存在没有最小类型的项。
+
+**示例：**
+
+考虑以下项：
+
+$$
+t = \lambda x:\text{Top}. x
+$$
+
+在声明式类型系统中，$t$ 可以具有类型 $\text{Top} \to \text{Top}$。
+
+但是，由于没有 $\text{S-Arrow}$ 规则，无法将 $\text{Top} \to \text{Top}$ 与任何其他函数类型进行子类型化，因此我们无法找到一个最小类型 $S$，使得 $\Gamma \vdash_\text{alg} t : S$ 且 $S <: \text{Top} \to \text{Top}$。
+
+---
+
+以上是对第16章内容的详细讲解，包括所有关键概念的中英双语解释，所有公式的列出和详细解析，以及涉及的习题的解答。希望这些内容能帮助您深入理解子类型的元理论。
 
 ### ---------------------------
 
+**16.3 合并（Joins）和交（Meets）**
 
+在带有**子类型（subtyping）**的语言中，对具有多个结果分支的表达式（如**条件表达式（conditionals）**或**case 表达式**）进行**类型检查（typechecking）**需要一些额外的机制。
+
+**示例：**
+
+回忆一下条件表达式的声明式类型规则。
+
+**条件表达式的类型规则（T-If）：**
+
+$$
+\frac{\Gamma \vdash t_1 : \text{Bool} \quad \Gamma \vdash t_2 : T \quad \Gamma \vdash t_3 : T}{\Gamma \vdash \text{if } t_1 \ \text{then } t_2 \ \text{else } t_3 : T} \quad (\text{T-If})
+$$
+
+**解释：**
+
+- **$\Gamma$** 是**类型环境（typing context）**。
+- **$t_1$、$t_2$、$t_3$** 是**项（terms）**。
+- **$T$** 是**类型（type）**。
+- 该规则表示：如果在类型环境 $\Gamma$ 下，$t_1$ 的类型为 $\text{Bool}$，并且 $t_2$ 和 $t_3$ 都具有类型 $T$，那么整个条件表达式 $\text{if } t_1 \ \text{then } t_2 \ \text{else } t_3$ 的类型为 $T$。
+
+该规则要求两个分支的类型相同，并将这个类型赋给整个条件表达式。
+
+但是，在存在**包含（subsumption）**的情况下，可能有多种方式为两个分支赋予相同的类型。
+
+**示例：**
+
+考虑以下表达式：
+
+$$
+\text{if } \ \text{true} \ \text{then } \ \{ x = \text{true}, \ y = \text{false} \} \ \text{else } \ \{ x = \text{false}, \ z = \text{true} \};
+$$
+
+该表达式的类型是 $\{ x : \text{Bool} \}$，因为：
+
+- **then 分支**的最小类型是 $\{ x : \text{Bool}, \ y : \text{Bool} \}$，可以使用包含规则（T-Sub）提升为 $\{ x : \text{Bool} \}$。
+- **else 分支**的最小类型是 $\{ x : \text{Bool}, \ z : \text{Bool} \}$，也可以提升为 $\{ x : \text{Bool} \}$。
+
+同样的表达式也具有类型 $\{ x : \text{Top} \}$ 和 $\{ \}$——实际上，任何同时是 $\{ x : \text{Bool}, \ y : \text{Bool} \}$ 和 $\{ x : \text{Bool}, \ z : \text{Bool} \}$ 的**超类型（supertype）**的类型。
+
+因此，整个条件表达式的**最小类型（minimal type）**是同时作为 $\{ x : \text{Bool}, \ y : \text{Bool} \}$ 和 $\{ x : \text{Bool}, \ z : \text{Bool} \}$ 的超类型的最小类型——即 $\{ x : \text{Bool} \}$。
+
+一般而言，为了计算任意条件表达式的最小类型，我们需要：
+
+1. 计算其 then 和 else 分支的最小类型。
+2. 计算这些类型的**最小公共超类型（least common supertype）**。
+
+这个类型通常被称为这些分支类型的**合并（join）**，因为它对应于**偏序集（partial order）**中两个元素的常规合并。
+
+**16.3.1 定义：**
+
+类型 $J$ 被称为类型对 $S$ 和 $T$ 的**合并（join）**，记为 $S \lor T = J$，如果满足以下条件：
+
+1. $S <: J$；
+2. $T <: J$；
+3. 对于所有类型 $U$，如果 $S <: U$ 且 $T <: U$，则 $J <: U$。
+
+类似地，我们说类型 $M$ 是 $S$ 和 $T$ 的**交（meet）**，记为 $S \land T = M$，如果满足：
+
+1. $M <: S$；
+2. $M <: T$；
+3. 对于所有类型 $L$，如果 $L <: S$ 且 $L <: T$，则 $L <: M$。
+
+**解释：**
+
+- **$S \lor T = J$** 表示 $J$ 是 $S$ 和 $T$ 的最小公共超类型。
+- **$S \land T = M$** 表示 $M$ 是 $S$ 和 $T$ 的最大公共子类型。
+
+取决于特定语言中子类型关系的定义，可能存在或不存在每对类型都有一个合并的情况。
+
+如果对于每个 $S$ 和 $T$，都存在某个 $J$，使得 $J$ 是 $S$ 和 $T$ 的合并，那么我们称给定的子类型关系**具有合并（has joins）**。
+
+类似地，如果对于每个 $S$ 和 $T$，都存在某个 $M$，使得 $M$ 是 $S$ 和 $T$ 的交，那么我们称给定的子类型关系**具有交（has meets）**。
+
+我们在本节中考虑的子类型关系有合并，但没有交。
+
+**示例：**
+
+- 类型 $\{ \}$ 和 $\text{Top} \to \text{Top}$ 没有任何共同的子类型，因此它们没有最大的公共子类型。
+
+然而，一个稍弱的性质成立。
+
+- 如果存在某个类型 $L$，使得 $L <: S$ 且 $L <: T$，那么我们说类型对 $S$ 和 $T$ 是**有下界的（bounded below）**。
+
+如果对于每个有下界的 $S$ 和 $T$，都存在某个 $M$，使得 $M$ 是 $S$ 和 $T$ 的交，那么我们称给定的子类型关系**具有有界的交（has bounded meets）**。
+
+**合并和交不一定是唯一的。**
+
+**示例：**
+
+- $\{ x : \text{Top}, \ y : \text{Top} \}$ 和 $\{ y : \text{Top}, \ x : \text{Top} \}$ 都是类型对 $\{ x : \text{Top}, \ y : \text{Top}, \ z : \text{Top} \}$ 和 $\{ x : \text{Top}, \ y : \text{Top}, \ w : \text{Top} \}$ 的合并。
+
+然而，同一对类型的两个不同的合并（或交）必须彼此是子类型，即：
+
+- 如果 $J_1$ 和 $J_2$ 都是 $S$ 和 $T$ 的合并，那么 $J_1 <: J_2$ 且 $J_2 <: J_1$。
+
+**16.3.2 命题 [合并和有界交的存在性]：**
+
+1. 对于每对类型 $S$ 和 $T$，存在某个类型 $J$，使得 $S \lor T = J$。
+2. 对于每对具有共同子类型的类型 $S$ 和 $T$，存在某个类型 $M$，使得 $S \land T = M$。
+
+**证明：**
+
+*练习 [推荐，«««]*
+
+**使用合并操作，我们现在可以在存在子类型的情况下为 $\text{if}$ 构造给出一个算法类型规则。**
+
+**算法类型规则（TA-If）：**
+
+$$
+\frac{\Gamma \vdash t_1 : T_1 \quad T_1 = \text{Bool} \quad \Gamma \vdash t_2 : T_2 \quad \Gamma \vdash t_3 : T_3 \quad T_2 \lor T_3 = T}{\Gamma \vdash \text{if } t_1 \ \text{then } t_2 \ \text{else } t_3 : T} \quad (\text{TA-If})
+$$
+
+**解释：**
+
+- **前提：**
+  - $\Gamma \vdash t_1 : T_1$，并且 $T_1 = \text{Bool}$。
+  - $\Gamma \vdash t_2 : T_2$。
+  - $\Gamma \vdash t_3 : T_3$。
+  - $T_2 \lor T_3 = T$。
+- **结论：**
+  - $\Gamma \vdash \text{if } t_1 \ \text{then } t_2 \ \text{else } t_3 : T$。
+
+这条规则表示：
+
+- 在类型环境 $\Gamma$ 下，如果 $t_1$ 的类型为 $\text{Bool}$，并且可以推导出 $t_2$ 和 $t_3$ 的类型分别为 $T_2$ 和 $T_3$，且 $T_2$ 和 $T_3$ 的合并为 $T$，那么整个条件表达式的类型为 $T$。
+
+---
+
+**16.3.3 练习 [««]：**
+
+**问题：**
+
+求表达式 $\text{if } \ \text{true} \ \text{then } \ \text{false} \ \text{else } \ \{\}$ 的最小类型。这是我们想要的类型吗？
+
+**解答：**
+
+- **then 分支：** $\text{false}$，类型为 $\text{Bool}$。
+- **else 分支：** $\{\}$，类型为空记录类型 $\{\}$。
+
+计算两个分支类型的合并：
+
+- 我们需要找到最小的类型 $T$，使得 $\text{Bool} <: T$ 且 $\{\} <: T$。
+- 在我们的类型系统中，$\text{Bool}$ 和 $\{\}$ 没有直接的子类型关系，但它们都是 $\text{Top}$ 的子类型，即 $\text{Bool} <: \text{Top}$，$\{\} <: \text{Top}$。
+- 因此，它们的最小公共超类型（合并）是 $\text{Top}$。
+
+**结论：**
+
+- 整个条件表达式的最小类型是 $\text{Top}$。
+
+**这是我们想要的类型吗？**
+
+- 可能不是。在实际编程中，我们通常希望类型系统能够捕获类型不匹配的错误。在这里，then 分支是布尔值，else 分支是空记录，它们的合并类型为 $\text{Top}$，这可能过于宽泛，无法提供有用的类型信息。
+
+---
+
+**16.3.4 练习 [«««]：**
+
+**问题：**
+
+将计算合并和交的算法扩展到带有引用的命令式语言（如第15.5节所述）是否容易？对于第15.5节中引用的处理，我们将不变的 $\text{Ref}$ 细化为协变的 $\text{Source}$ 和逆变的 $\text{Sink}$，这种情况下又如何？
+
+**解答：**
+
+**将计算合并和交的算法扩展到带有引用的命令式语言并不容易。**
+
+**原因：**
+
+1. **引用类型的不变性：**
+
+   - 在第15.5节中，引用类型 $\text{Ref} \ T$ 的子类型规则是**不变的（invariant）**：
+     $$
+     \text{如果 } S <: T \text{ 且 } T <: S, \quad \text{则 } \text{Ref} \ S <: \text{Ref} \ T \quad (\text{S-Ref})
+     $$
+   - 这意味着只有当 $S$ 和 $T$ 在子类型关系下彼此等价时，才有 $\text{Ref} \ S <: \text{Ref} \ T$。
+
+2. **合并的计算复杂性：**
+
+   - 对于不变类型构造子，两个类型的合并可能不存在。
+   - 例如，考虑 $\text{Ref} \ \text{Int}$ 和 $\text{Ref} \ \text{Bool}$，由于它们既不是彼此的子类型，也没有共同的超类型，因此无法计算出它们的合并。
+
+3. **对算法的影响：**
+
+   - 计算合并和交的算法需要处理协变、逆变和不变的类型构造子。
+   - 对于协变的类型构造子（如 $\text{List}$），合并的计算相对简单。
+   - 对于逆变的类型构造子（如 $\text{Sink}$），合并的计算更加复杂。
+   - 对于不变的类型构造子（如 $\text{Ref}$），合并可能不存在，这使得算法的设计和实现更加困难。
+
+**对于引用的细化处理（$\text{Source}$ 和 $\text{Sink}$）：**
+
+1. **$\text{Source}$ 和 $\text{Sink}$ 的子类型关系：**
+
+   - $\text{Source} \ T$ 是**协变的（covariant）**：
+     $$
+     \text{如果 } S <: T, \quad \text{则 } \text{Source} \ S <: \text{Source} \ T \quad (\text{S-Source})
+     $$
+   - $\text{Sink} \ T$ 是**逆变的（contravariant）**：
+     $$
+     \text{如果 } T <: S, \quad \text{则 } \text{Sink} \ S <: \text{Sink} \ T \quad (\text{S-Sink})
+     $$
+
+2. **合并的计算：**
+
+   - 对于协变的 $\text{Source}$ 类型，合并的计算类似于普通类型，比较容易。
+   - 对于逆变的 $\text{Sink}$ 类型，合并的计算更加复杂，可能不存在。
+
+3. **对算法的影响：**
+
+   - 需要为不同的变型（variance）设计不同的合并计算方法。
+   - 这增加了算法的复杂性。
+
+**结论：**
+
+- **因此，扩展计算合并和交的算法以处理引用和不同变型的类型构造子并不容易，需要额外的机制和细致的处理。**
+
+---
+
+**16.4 算法类型和最小类型（Bottom Type）**
+
+如果在子类型关系中添加了**最小类型（Bottom Type）** $\text{Bot}$（参见第15.4节），则子类型和类型算法必须进行一些扩展。
+
+**在算法子类型关系中添加一条规则：**
+
+$$
+\frac{}{\vdash_{\text{alg}} \ \text{Bot} <: T} \quad (\text{SA-Bot})
+$$
+
+**解释：**
+
+- 这表示 $\text{Bot}$ 是所有类型 $T$ 的子类型，即 $\text{Bot} <: T$。
+
+**在算法类型关系中添加两个规则：**
+
+1. **应用规则（TA-AppBot）：**
+
+   $$
+   \frac{\Gamma \vdash_{\text{alg}} t_1 : T_1 \quad T_1 = \text{Bot} \quad \Gamma \vdash_{\text{alg}} t_2 : T_2}{\Gamma \vdash_{\text{alg}} t_1 \ t_2 : \text{Bot}} \quad (\text{TA-AppBot})
+   $$
+
+   **解释：**
+
+   - 如果 $t_1$ 的类型为 $\text{Bot}$，则 $t_1 \ t_2$ 的类型为 $\text{Bot}$，无论 $t_2$ 的类型为何。
+
+2. **投影规则（TA-ProjBot）：**
+
+   $$
+   \frac{\Gamma \vdash_{\text{alg}} t_1 : R_1 \quad R_1 = \text{Bot}}{\Gamma \vdash_{\text{alg}} t_1 . l_i : \text{Bot}} \quad (\text{TA-ProjBot})
+   $$
+
+   **解释：**
+
+   - 如果 $t_1$ 的类型为 $\text{Bot}$，则 $t_1 . l_i$ 的类型为 $\text{Bot}$。
+
+**这些规则的直觉：**
+
+- 在声明式系统中，我们可以将类型为 $\text{Bot}$ 的项提升为任何我们需要的函数类型，然后应用于任意参数，结果类型可以是任何类型。
+- 但在实际中，由于 $\text{Bot}$ 表示不可达的值（如程序崩溃或无限循环），因此应用或投影的结果类型应为 $\text{Bot}$。
+
+---
+
+**16.4.1 练习 [«]：**
+
+**问题：**
+
+假设我们的语言中还包含条件表达式。我们是否需要为 $\text{if}$ 添加另一个算法类型规则？
+
+**解答：**
+
+是的，我们需要为 $\text{if}$ 添加新的算法类型规则，以处理分支类型为 $\text{Bot}$ 的情况。
+
+**原因：**
+
+- 现有的 $\text{TA-If}$ 规则需要计算分支类型的合并，但当一个分支的类型为 $\text{Bot}$ 时，合并的计算需要特殊处理。
+- 我们需要处理以下情况：
+  - 当 $T_2 = \text{Bot}$ 时，$\text{if } t_1 \ \text{then } t_2 \ \text{else } t_3$ 的类型应为 $T_3$。
+  - 当 $T_3 = \text{Bot}$ 时，类型应为 $T_2$。
+  - 当 $T_2 = T_3 = \text{Bot}$ 时，类型为 $\text{Bot}$。
+
+**新增规则示例：**
+
+1. **当 then 分支为 $\text{Bot}$：**
+
+   $$
+   \frac{\Gamma \vdash t_1 : \text{Bool} \quad \Gamma \vdash t_2 : \text{Bot} \quad \Gamma \vdash t_3 : T_3}{\Gamma \vdash \text{if } t_1 \ \text{then } t_2 \ \text{else } t_3 : T_3}
+   $$
+
+2. **当 else 分支为 $\text{Bot}$：**
+
+   $$
+   \frac{\Gamma \vdash t_1 : \text{Bool} \quad \Gamma \vdash t_2 : T_2 \quad \Gamma \vdash t_3 : \text{Bot}}{\Gamma \vdash \text{if } t_1 \ \text{then } t_2 \ \text{else } t_3 : T_2}
+   $$
+
+3. **当两个分支都为 $\text{Bot}$：**
+
+   $$
+   \frac{\Gamma \vdash t_1 : \text{Bool} \quad \Gamma \vdash t_2 : \text{Bot} \quad \Gamma \vdash t_3 : \text{Bot}}{\Gamma \vdash \text{if } t_1 \ \text{then } t_2 \ \text{else } t_3 : \text{Bot}}
+   $$
+
+**结论：**
+
+- 为了正确处理 $\text{Bot}$ 类型，需要为条件表达式添加新的算法类型规则。
+
+---
+
+支持 $\text{Bot}$ 类型所需的添加并不复杂。然而，我们将在第28.8节中看到，当 $\text{Bot}$ 与**有界量化（bounded quantification）**结合时，会出现更严重的复杂性。
 
 ### ----------------------------
 
