--- a/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第三部分 子类型化/第17章 子类型化的 ML 语言实现.md
+++ b/计算机科学/Programming Language Theory (PLT)/《书》/《Types and Programming Languages》/第三部分 子类型化/第17章 子类型化的 ML 语言实现.md
@@ -2,7 +2,766 @@
 
 
 
+**17 子类型的 ML 实现（An ML Implementation of Subtyping）**
 
+本章将扩展第10章中开发的简单类型 $\lambda$-演算的 OCaml 实现，加入支持**子类型（subtyping）**所需的额外机制，特别是用于检查子类型关系的函数。
+
+---
+
+**17.1 语法（Syntax）**
+
+类型和项的数据类型定义遵循图15-1和15-3中的抽象语法。
+
+在 OCaml 中，类型（types）的数据类型定义如下：
+
+```ocaml
+type ty =
+  | TyRecord of (string * ty) list
+  | TyTop
+  | TyArr of ty * ty
+```
+
+**解释：**
+
+- **`type ty`**：定义一个名为 `ty` 的类型数据结构，用于表示类型。
+
+- **`TyRecord of (string * ty) list`**：表示**记录类型（record type）**，它是一个字段名和类型的列表。
+
+  - **`(string * ty) list`**：一个字符串和类型对的列表，表示字段名和对应的类型。
+
+- **`TyTop`**：表示**顶类型（Top type）**，即所有类型的超类型。
+
+- **`TyArr of ty * ty`**：表示**函数类型（arrow type）**，从一个类型映射到另一个类型。
+
+  - **`ty * ty`**：一个类型的元组，表示函数的参数类型和返回类型。
+
+项（terms）的数据类型定义如下：
+
+```ocaml
+type term =
+  | TmRecord of info * (string * term) list
+  | TmProj of info * term * string
+  | TmVar of info * int * int
+  | TmAbs of info * string * ty * term
+  | TmApp of info * term * term
+```
+
+**解释：**
+
+- **`type term`**：定义一个名为 `term` 的项数据结构，用于表示项。
+
+- **`TmRecord of info * (string * term) list`**：表示**记录项（record term）**。
+
+  - **`info`**：一些元信息，如位置信息。
+
+  - **`(string * term) list`**：字段名和对应项的列表。
+
+- **`TmProj of info * term * string`**：表示**投影项（projection term）**。
+
+  - **`term`**：被投影的项。
+
+  - **`string`**：要投影的字段名。
+
+- **`TmVar of info * int * int`**：表示**变量项（variable term）**。
+
+  - **`int * int`**：通常表示变量的 De Bruijn 索引和上下文长度。
+
+- **`TmAbs of info * string * ty * term`**：表示**抽象项（abstraction term）**，即 $\lambda$-抽象。
+
+  - **`string`**：参数名。
+
+  - **`ty`**：参数类型。
+
+  - **`term`**：函数体。
+
+- **`TmApp of info * term * term`**：表示**应用项（application term）**。
+
+  - **`term * term`**：函数项和参数项。
+
+**新增的构造子：**
+
+- 与纯简单类型 $\lambda$-演算相比，新增了以下构造子：
+
+  - **类型构造子（type constructors）**：
+
+    - **`TyTop`**：顶类型。
+
+    - **`TyRecord`**：记录类型。
+
+  - **项构造子（term constructors）**：
+
+    - **`TmRecord`**：记录项。
+
+    - **`TmProj`**：投影项。
+
+**表示记录及其类型：**
+
+- 我们以最简单的方式表示记录及其类型，即字段名和关联的项或类型的列表。
+
+---
+
+**17.2 子类型（Subtyping）**
+
+第212页的算法子类型关系的伪代码可以直接翻译成 OCaml，如下所示。
+
+OCaml 中的子类型检查函数定义如下：
+
+```ocaml
+let rec subtype tyS tyT =
+  (=) tyS tyT ||
+  match (tyS, tyT) with
+    (TyRecord(fS), TyRecord(fT)) ->
+      List.for_all
+        (fun (li, tyTi) ->
+          try
+            let tySi = List.assoc li fS in
+            subtype tySi tyTi
+          with Not_found -> false)
+        fT
+  | (_, TyTop) ->
+      true
+  | (TyArr(tyS1, tyS2), TyArr(tyT1, tyT2)) ->
+      (subtype tyT1 tyS1) && (subtype tyS2 tyT2)
+  | (_, _) ->
+      false
+```
+
+**解释：**
+
+1. **函数定义：**
+
+   - **`let rec subtype tyS tyT =`**：定义一个递归函数 `subtype`，用于检查类型 `tyS` 是否是类型 `tyT` 的子类型。
+
+2. **反身性检查：**
+
+   - **`(=) tyS tyT`**：首先检查 `tyS` 是否等于 `tyT`。
+
+     - **`(=)`**：OCaml 中的普通相等运算符。
+
+   - **`||`**：逻辑或运算符。如果左侧表达式为 `true`，则返回 `true`；否则，继续评估右侧表达式。
+
+3. **模式匹配 `match (tyS, tyT) with`：**
+
+   - **记录类型的子类型检查：**
+
+     - **`(TyRecord(fS), TyRecord(fT)) ->`**：如果 `tyS` 和 `tyT` 都是记录类型，则进入此分支。
+
+     - **`List.for_all ... fT`**：对 `tyT` 的每个字段 `(li, tyTi)`，检查对应的 `tyS` 中的字段类型 `tySi` 是否是 `tyTi` 的子类型。
+
+       - **`List.for_all`**：OCaml 的标准库函数，`List.for_all pred lst` 对列表 `lst` 中的每个元素应用谓词 `pred`，如果所有结果都为 `true`，则返回 `true`。
+
+       - **`(fun (li, tyTi) -> ...)`**：匿名函数，接受字段名 `li` 和字段类型 `tyTi`。
+
+       - **`List.assoc li fS`**：在 `fS` 中查找字段名为 `li` 的字段，返回其类型 `tySi`。
+
+         - 如果 `li` 不在 `fS` 中，抛出 `Not_found` 异常。
+
+       - **`subtype tySi tyTi`**：递归调用 `subtype`，检查 `tySi` 是否是 `tyTi` 的子类型。
+
+       - **`with Not_found -> false`**：如果在 `fS` 中找不到字段 `li`，则返回 `false`。
+
+   - **顶类型的子类型检查：**
+
+     - **`(_, TyTop) ->`**：如果目标类型 `tyT` 是 `TyTop`，则无论 `tyS` 是什么类型，都返回 `true`。
+
+       - 因为所有类型都是 `TyTop` 的子类型。
+
+   - **函数类型的子类型检查：**
+
+     - **`(TyArr(tyS1, tyS2), TyArr(tyT1, tyT2)) ->`**：如果 `tyS` 和 `tyT` 都是函数类型，则进入此分支。
+
+     - **`(subtype tyT1 tyS1) && (subtype tyS2 tyT2)`**：
+
+       - **`subtype tyT1 tyS1`**：检查参数类型的子类型关系，注意是逆变的。
+
+         - 函数类型的参数类型是逆变的，即 `tyT1` 是 `tyS1` 的子类型。
+
+       - **`subtype tyS2 tyT2`**：检查返回类型的子类型关系，协变的。
+
+         - 函数类型的返回类型是协变的，即 `tyS2` 是 `tyT2` 的子类型。
+
+   - **默认情况：**
+
+     - **`(_, _) -> false`**：对于其他任何类型组合，返回 `false`。
+
+4. **添加的反身性检查的意义：**
+
+   - 虽然严格来说，这个检查不是必需的，但在实际的编译器中，它是一个重要的优化。
+
+   - **原因：**
+
+     - 在大多数实际程序中，子类型检查很少用到。
+
+     - 大多数情况下，当调用子类型检查器时，两个被比较的类型实际上是相等的。
+
+     - 因此，首先检查类型是否相等，可以快速返回结果，避免不必要的递归和匹配。
+
+   - **进一步优化：**
+
+     - 如果类型在表示上确保结构相同的类型具有物理上相同的表示（例如，使用哈希共享），那么相等检查只需要一条指令。
+
+5. **记录类型的子类型规则涉及列表的处理：**
+
+   - **`List.for_all`**：用于对列表中的每个元素应用谓词函数。
+
+   - **`List.assoc li fS`**：在字段列表 `fS` 中查找字段名为 `li` 的字段，返回其类型。
+
+     - 如果找不到，抛出 `Not_found` 异常。
+
+   - **异常处理**：
+
+     - 在字段不存在时，捕获 `Not_found` 异常，并返回 `false`，表示子类型检查失败。
+
+---
+
+**17.3 类型检查（Typing）**
+
+类型检查函数是之前实现中的 `typeof` 函数的直接扩展。主要的变化是在**应用子句（application clause）**中，我们在参数类型和函数期望的类型之间执行子类型检查。
+
+此外，我们还为**记录的构造（construction）**和**投影（projection）**添加了两个新的子句。
+
+OCaml 中的类型检查函数定义如下：
+
+```ocaml
+let rec typeof ctx t =
+  match t with
+    TmRecord(fi, fields) ->
+      let fieldtys =
+        List.map (fun (li, ti) -> (li, typeof ctx ti)) fields in
+      TyRecord(fieldtys)
+  | TmProj(fi, t1, l) ->
+      (match (typeof ctx t1) with
+          TyRecord(fieldtys) ->
+            (try List.assoc l fieldtys
+             with Not_found -> error fi ("label "^l^" not found"))
+        | _ -> error fi "Expected record type")
+  | TmVar(fi, i, _) -> getTypeFromContext fi ctx i
+  | TmAbs(fi, x, tyT1, t2) ->
+      let ctx' = addbinding ctx x (VarBind(tyT1)) in
+      let tyT2 = typeof ctx' t2 in
+      TyArr(tyT1, tyT2)
+  | TmApp(fi, t1, t2) ->
+      let tyT1 = typeof ctx t1 in
+      let tyT2 = typeof ctx t2 in
+      (match tyT1 with
+          TyArr(tyT11, tyT12) ->
+            if subtype tyT2 tyT11 then tyT12
+            else error fi "parameter type mismatch"
+        | _ -> error fi "arrow type expected")
+```
+
+**解释：**
+
+1. **函数定义：**
+
+   - **`let rec typeof ctx t =`**：定义一个递归函数 `typeof`，用于在上下文 `ctx` 下计算项 `t` 的类型。
+
+2. **模式匹配 `match t with`：**
+
+   - **记录构造子 `TmRecord(fi, fields)`：**
+
+     - **`fields`**：一个字段名和项的列表。
+
+     - **计算字段类型列表 `fieldtys`：**
+
+       ```ocaml
+       let fieldtys = List.map (fun (li, ti) -> (li, typeof ctx ti)) fields in
+       ```
+
+       - 对于每个字段 `(li, ti)`，计算其类型 `tyTi = typeof ctx ti`，然后组成字段名和类型的对 `(li, tyTi)`。
+
+       - **`List.map`**：对列表 `fields` 中的每个元素 `(li, ti)` 应用函数 `(fun (li, ti) -> (li, typeof ctx ti))`，返回结果列表。
+
+     - **返回记录类型 `TyRecord(fieldtys)`**。
+
+   - **投影构造子 `TmProj(fi, t1, l)`：**
+
+     - **首先计算 `t1` 的类型：**
+
+       ```ocaml
+       (match (typeof ctx t1) with
+          TyRecord(fieldtys) -> ...
+        | _ -> error fi "Expected record type")
+       ```
+
+       - 如果 `t1` 的类型是记录类型 `TyRecord(fieldtys)`，则继续处理。
+
+       - 否则，调用 `error fi "Expected record type"`，报告错误。
+
+     - **查找字段类型：**
+
+       ```ocaml
+       (try List.assoc l fieldtys
+        with Not_found -> error fi ("label "^l^" not found"))
+       ```
+
+       - 使用 `List.assoc l fieldtys` 在字段类型列表 `fieldtys` 中查找字段名为 `l` 的字段，返回其类型。
+
+       - 如果找不到，捕获 `Not_found` 异常，调用 `error fi ("label "^l^" not found")`，报告错误。
+
+   - **变量构造子 `TmVar(fi, i, _)`：**
+
+     - **`getTypeFromContext fi ctx i`**：从上下文 `ctx` 中获取索引为 `i` 的变量的类型。
+
+   - **抽象构造子 `TmAbs(fi, x, tyT1, t2)`：**
+
+     - **将变量绑定添加到上下文：**
+
+       ```ocaml
+       let ctx' = addbinding ctx x (VarBind(tyT1)) in
+       ```
+
+       - 使用 `addbinding` 函数，将变量名 `x` 和类型 `tyT1` 的绑定添加到上下文 `ctx` 中，得到新的上下文 `ctx'`。
+
+     - **计算函数体的类型：**
+
+       ```ocaml
+       let tyT2 = typeof ctx' t2 in
+       ```
+
+     - **返回函数类型 `TyArr(tyT1, tyT2)`**。
+
+   - **应用构造子 `TmApp(fi, t1, t2)`：**
+
+     - **计算函数和参数的类型：**
+
+       ```ocaml
+       let tyT1 = typeof ctx t1 in
+       let tyT2 = typeof ctx t2 in
+       ```
+
+     - **匹配函数的类型：**
+
+       ```ocaml
+       (match tyT1 with
+          TyArr(tyT11, tyT12) -> ...
+        | _ -> error fi "arrow type expected")
+       ```
+
+       - 如果 `tyT1` 是函数类型 `TyArr(tyT11, tyT12)`，则继续处理。
+
+       - 否则，调用 `error fi "arrow type expected"`，报告错误。
+
+     - **子类型检查：**
+
+       ```ocaml
+       if subtype tyT2 tyT11 then tyT12
+       else error fi "parameter type mismatch"
+       ```
+
+       - 使用 `subtype tyT2 tyT11` 检查参数类型 `tyT2` 是否是函数期望的参数类型 `tyT11` 的子类型。
+
+       - 如果是，返回函数的返回类型 `tyT12`。
+
+       - 如果不是，调用 `error fi "parameter type mismatch"`，报告错误。
+
+3. **OCaml 特性的使用：**
+
+   - **`List.map`**：在 `TmRecord` 子句中，我们使用 `List.map` 对字段列表 `fields` 中的每个元素 `(li, ti)` 应用函数 `(fun (li, ti) -> (li, typeof ctx ti))`，得到字段名和类型的列表 `fieldtys`。
+
+   - **`List.assoc`**：在 `TmProj` 子句中，我们使用 `List.assoc l fieldtys` 查找字段名为 `l` 的字段类型。
+
+     - 如果引发 `Not_found` 异常，捕获并调用 `error` 函数报告错误。
+
+   - **字符串连接 `^`**：在错误消息中，使用 `^` 进行字符串的拼接。
+
+     - 例如，`"label "^l^" not found"` 将字符串 `"label "`、`l` 和 `" not found"` 拼接在一起。
+
+---
+
+**17.3.1 练习 [«««]：**
+
+**问题：**
+
+第16.3节展示了在带有子类型的语言中添加布尔值和条件表达式需要额外的支持函数来计算给定类型对的最小上界。命题16.3.2（参见第522页）的证明给出了必要算法的数学描述。
+
+`joinexercise` 类型检查器是一个不完整的简单类型 $\lambda$-演算的实现，支持子类型、记录和条件表达式：提供了基本的解析和打印函数，但 `typeof` 函数中缺少处理 `TmIf` 的子句，以及它所依赖的 `join` 函数。请将布尔值和条件表达式（以及合并和交）添加到此实现中。
+
+**解答：**
+
+1. **添加布尔类型和布尔常量：**
+
+   - **在类型定义中添加布尔类型：**
+
+     ```ocaml
+     type ty =
+       | TyBool
+       | (* existing type definitions *)
+     ```
+
+   - **在项定义中添加布尔常量：**
+
+     ```ocaml
+     type term =
+       | TmTrue of info
+       | TmFalse of info
+       | (* existing term definitions *)
+     ```
+
+2. **实现条件表达式 `TmIf`：**
+
+   - **在项定义中添加条件表达式：**
+
+     ```ocaml
+     type term =
+       | TmIf of info * term * term * term
+       | (* existing term definitions *)
+     ```
+
+   - **在 `typeof` 函数中添加处理 `TmIf` 的子句：**
+
+     ```ocaml
+     | TmIf(fi, t1, t2, t3) ->
+         let tyT1 = typeof ctx t1 in
+         if tyT1 <> TyBool then error fi "guard of conditional not a boolean"
+         else
+           let tyT2 = typeof ctx t2 in
+           let tyT3 = typeof ctx t3 in
+           let tyT = join tyT2 tyT3 in
+           tyT
+     ```
+
+     - 首先计算条件 `t1` 的类型 `tyT1`，并检查其是否为 `TyBool`。
+
+     - 然后分别计算 then 分支 `t2` 和 else 分支 `t3` 的类型 `tyT2` 和 `tyT3`。
+
+     - 使用 `join tyT2 tyT3` 计算两种类型的合并类型 `tyT`。
+
+     - 返回类型 `tyT`。
+
+3. **实现合并函数 `join`：**
+
+   - **定义 `join` 函数，用于计算两个类型的合并（最小上界）：**
+
+     ```ocaml
+     let rec join tyS tyT =
+       if subtype tyS tyT then tyT
+       else if subtype tyT tyS then tyS
+       else
+         match (tyS, tyT) with
+           (TyRecord(fS), TyRecord(fT)) ->
+             let labelsS = List.map fst fS in
+             let labelsT = List.map fst fT in
+             let commonLabels = List.filter (fun l -> List.mem l labelsT) labelsS in
+             let fields = List.map (fun l ->
+               let tySi = List.assoc l fS in
+               let tyTi = List.assoc l fT in
+               (l, join tySi tyTi)
+             ) commonLabels in
+             TyRecord(fields)
+         | _ -> TyTop
+     ```
+
+     - **解释：**
+
+       - 如果 `tyS` 是 `tyT` 的子类型，返回 `tyT`。
+
+       - 如果 `tyT` 是 `tyS` 的子类型，返回 `tyS`。
+
+       - 如果都是记录类型，计算公共字段，并对每个公共字段的类型递归调用 `join`。
+
+       - 对于其他情况，返回 `TyTop`，表示无法找到更具体的公共类型。
+
+4. **更新其他必要的部分：**
+
+   - 确保子类型检查函数 `subtype` 支持新的类型。
+
+   - 更新解析器和打印函数，以支持新的项和类型。
+
+5. **测试：**
+
+   - 编写一些包含条件表达式的示例程序，测试类型检查器是否正确计算类型。
+
+---
+
+**17.3.2 练习 [««]：**
+
+**问题：**
+
+按照第16.4节的描述，将最小的 `Bot` 类型添加到 `rcdsub` 实现中。
+
+**解答：**
+
+1. **在类型定义中添加 `Bot` 类型：**
+
+   ```ocaml
+   type ty =
+     | TyBot
+     | (* existing type definitions *)
+   ```
+
+2. **更新子类型检查函数 `subtype`：**
+
+   ```ocaml
+   let rec subtype tyS tyT =
+     (=) tyS tyT ||
+     match (tyS, tyT) with
+       (TyBot, _) -> true
+     | (_, TyTop) -> true
+     | (* existing cases *)
+   ```
+
+   - 添加规则：`TyBot` 是所有类型的子类型，即对于任何类型 `tyT`，`subtype TyBot tyT` 返回 `true`。
+
+3. **更新类型检查函数 `typeof`：**
+
+   - **在应用和投影的类型规则中，处理 `TyBot` 类型：**
+
+     - **应用规则中，处理函数类型为 `TyBot` 的情况：**
+
+       ```ocaml
+       | TmApp(fi, t1, t2) ->
+           let tyT1 = typeof ctx t1 in
+           let tyT2 = typeof ctx t2 in
+           match tyT1 with
+             TyArr(tyT11, tyT12) ->
+               if subtype tyT2 tyT11 then tyT12
+               else error fi "parameter type mismatch"
+           | TyBot -> TyBot
+           | _ -> error fi "arrow type expected"
+       ```
+
+     - **投影规则中，处理类型为 `TyBot` 的情况：**
+
+       ```ocaml
+       | TmProj(fi, t1, l) ->
+           let tyT1 = typeof ctx t1 in
+           match tyT1 with
+             TyRecord(fieldtys) ->
+               (try List.assoc l fieldtys
+                with Not_found -> error fi ("label "^l^" not found"))
+             | TyBot -> TyBot
+             | _ -> error fi "Expected record type"
+       ```
+
+4. **测试：**
+
+   - 编写一些使用 `Bot` 类型的示例程序，测试类型检查器的行为。
+
+---
+
+**17.3.3 练习 [««« 3]：**
+
+**问题：**
+
+如果在应用规则中子类型检查失败，我们的类型检查器打印的错误信息可能对用户不是很有帮助。我们可以改进它，包含期望的参数类型和实际的参数类型在错误信息中，但即使这样也可能难以理解。
+
+例如，如果期望的类型是：
+
+```ocaml
+{x:{}, y:{}, z:{}, a:{}, b:{}, c:{}, d:{}, e:{}, f:{}, g:{}}
+```
+
+而实际的类型是：
+
+```ocaml
+{y:{}, z:{}, f:{}, a:{}, x:{}, i:{}, b:{}, e:{}, g:{}, c:{}, h:{}}
+```
+
+很难立即看出第二个类型缺少的是字段 `d`。
+
+通过修改 `subtype` 函数，我们可以极大地改进错误报告，使其在返回 `true` 或 `false` 之外，返回一个简单的值（单元值 `()`）或者引发一个异常。由于异常是在类型实际匹配失败的地方引发的，因此它可以更精确地指出问题所在。
+
+请重新实现 `typeof` 和 `subtype` 函数，使所有的错误信息尽可能地有用。
+
+**解答：**
+
+1. **定义异常类型：**
+
+   ```ocaml
+   exception SubtypeError of string
+   ```
+
+   - 定义一个新的异常类型 `SubtypeError`，包含一个字符串消息。
+
+2. **修改子类型检查函数 `subtype`：**
+
+   ```ocaml
+   let rec subtype tyS tyT =
+     if (=) tyS tyT then ()
+     else match (tyS, tyT) with
+       (TyRecord(fS), TyRecord(fT)) ->
+         List.iter
+           (fun (li, tyTi) ->
+             try
+               let tySi = List.assoc li fS in
+               subtype tySi tyTi
+             with Not_found ->
+               raise (SubtypeError ("Missing field "^li)))
+           fT
+       | (_, TyTop) -> ()
+       | (TyArr(tyS1, tyS2), TyArr(tyT1, tyT2)) ->
+           subtype tyT1 tyS1;
+           subtype tyS2 tyT2
+       | (_, _) ->
+           raise (SubtypeError ("Type " ^ (string_of_ty tyS) ^ " is not a subtype of " ^ (string_of_ty tyT)))
+   ```
+
+   - **修改返回值：**
+
+     - 当子类型检查成功时，返回 `()`（OCaml 中的单元值）。
+
+     - 当子类型检查失败时，使用 `raise (SubtypeError msg)` 抛出异常，包含详细的错误信息。
+
+   - **在字段缺失时抛出异常：**
+
+     - 如果在 `fS` 中找不到字段 `li`，抛出异常，消息为 `"Missing field "^li`。
+
+   - **在类型不匹配时抛出异常：**
+
+     - 在无法匹配的情况下，抛出异常，包含两个类型的信息。
+
+3. **修改类型检查函数 `typeof`：**
+
+   - **在调用 `subtype` 的地方，捕获异常并提供详细的错误信息：**
+
+     ```ocaml
+     | TmApp(fi, t1, t2) ->
+         let tyT1 = typeof ctx t1 in
+         let tyT2 = typeof ctx t2 in
+         match tyT1 with
+           TyArr(tyT11, tyT12) ->
+             (try
+                subtype tyT2 tyT11;
+                tyT12
+              with SubtypeError msg ->
+                error fi ("Parameter type mismatch: " ^ msg))
+           | _ -> error fi "arrow type expected"
+     ```
+
+   - **当子类型检查失败时，捕获 `SubtypeError` 异常，并在错误信息中包含具体的错误原因。**
+
+4. **改进错误信息：**
+
+   - **在错误信息中包含具体的字段名和类型信息，帮助用户理解问题所在。**
+
+   - **示例：**
+
+     - 如果缺少字段 `d`，错误信息为 `"Parameter type mismatch: Missing field d"`。
+
+     - 如果类型不匹配，错误信息为 `"Parameter type mismatch: Type ... is not a subtype of ..."`。
+
+5. **测试：**
+
+   - 编写一些类型检查失败的示例程序，验证错误信息是否更加清晰和有用。
+
+---
+
+**17.3.4 练习 [««« 3]：**
+
+**问题：**
+
+在第15.6节中，我们通过将类型和子类型推导翻译为纯简单类型 $\lambda$-演算的项，定义了一个带有记录和子类型的语言的**强制语义（coercion semantics）**。请通过修改上面给出的 `subtype` 函数，使其构造并返回一个强制函数（表示为一个项），以及类似地修改 `typeof` 函数，使其返回一个类型和一个翻译后的项。然后，应当对翻译后的项（而不是原始的输入项）进行求值，并像往常一样打印结果。
+
+**解答：**
+
+1. **修改子类型检查函数 `subtype`：**
+
+   - **使其返回一个强制函数（coercion function），表示为一个项。**
+
+   - **定义返回类型：**
+
+     ```ocaml
+     let rec subtype tyS tyT : term =
+     ```
+
+     - 返回值是一个项 `term`，表示从类型 `tyS` 到 `tyT` 的强制函数。
+
+   - **修改函数实现：**
+
+     ```ocaml
+     if (=) tyS tyT then
+       TmAbs(dummyinfo, "_", tyS, TmVar(dummyinfo, 0, 1))  (* 恒等函数 *)
+     else match (tyS, tyT) with
+       (TyRecord(fS), TyRecord(fT)) ->
+         (* 构造一个函数，将输入记录转换为输出记录 *)
+         let fields = List.map (fun (li, tyTi) ->
+           try
+             let tySi = List.assoc li fS in
+             let ci = subtype tySi tyTi in
+             (li, ci)
+           with Not_found ->
+             raise (SubtypeError ("Missing field "^li))
+         ) fT in
+         let x = TmVar(dummyinfo, 0, 1) in
+         let body = TmRecord(dummyinfo, List.map (fun (li, ci) ->
+           (li, TmApp(dummyinfo, ci, TmProj(dummyinfo, x, li)))
+         ) fields) in
+         TmAbs(dummyinfo, "_", tyS, body)
+       | (_, TyTop) ->
+           (* 将任何类型的值映射到一个占位符 *)
+           TmAbs(dummyinfo, "_", tyS, TmUnit(dummyinfo))
+       | (TyArr(tyS1, tyS2), TyArr(tyT1, tyT2)) ->
+           let c1 = subtype tyT1 tyS1 in
+           let c2 = subtype tyS2 tyT2 in
+           let f = TmVar(dummyinfo, 0, 1) in
+           let x = TmVar(dummyinfo, 0, 1) in
+           let body = TmApp(dummyinfo, c2, TmApp(dummyinfo, f, TmApp(dummyinfo, c1, x))) in
+           TmAbs(dummyinfo, "_", TyArr(tyS1, tyS2), body)
+       | (_, _) ->
+           raise (SubtypeError ("Cannot coerce from " ^ (string_of_ty tyS) ^ " to " ^ (string_of_ty tyT)))
+     ```
+
+     - **解释：**
+
+       - **相等的类型：**
+
+         - 返回恒等函数 `λ_. x`。
+
+       - **记录类型：**
+
+         - 构造一个函数，接受类型为 `tyS` 的记录，返回类型为 `tyT` 的记录。
+
+         - 对于 `tyT` 中的每个字段 `li`，尝试在 `tyS` 中找到对应的字段 `li`，并递归构造强制函数 `ci`。
+
+         - 在函数体中，对输入记录的每个字段应用对应的强制函数。
+
+       - **函数类型：**
+
+         - 构造一个函数，接受类型为 `TyArr(tyS1, tyS2)` 的函数，返回类型为 `TyArr(tyT1, tyT2)` 的函数。
+
+         - 使用递归构造的强制函数 `c1` 和 `c2`，在函数体中进行组合。
+
+       - **无法强制转换的类型：**
+
+         - 抛出异常，报告无法从 `tyS` 强制转换到 `tyT`。
+
+2. **修改类型检查函数 `typeof`：**
+
+   - **使其返回类型和翻译后的项 `(tyT, t')`。**
+
+   - **在需要子类型检查的地方，应用强制函数。**
+
+     ```ocaml
+     | TmApp(fi, t1, t2) ->
+         let (tyT1, t1') = typeof ctx t1 in
+         let (tyT2, t2') = typeof ctx t2 in
+         match tyT1 with
+           TyArr(tyT11, tyT12) ->
+             (try
+                let c = subtype tyT2 tyT11 in
+                let t2'' = TmApp(fi, c, t2') in
+                (tyT12, TmApp(fi, t1', t2''))
+              with SubtypeError msg ->
+                error fi ("Parameter type mismatch: " ^ msg))
+           | _ -> error fi "arrow type expected"
+     ```
+
+3. **更新其他部分：**
+
+   - **确保所有构造子都返回类型和翻译后的项。**
+
+4. **求值翻译后的项：**
+
+   - **在主程序中，对翻译后的项进行求值，并打印结果。**
+
+5. **测试：**
+
+   - **编写示例程序，验证强制函数的正确性和求值结果。**
+
+---
+
+以上，我们按照您的要求，完整地逐条详解了第17章的内容，包括所有公式和代码的详细解释，以及涉及的习题的解答。希望这些内容能帮助您深入理解子类型的 ML 实现。
 
 ### ---------------------------
 
